--- a/html/accueil.html
+++ b/html/accueil.html
@@ -100,7 +100,7 @@
             <h2>Notre Team</h2>
             <div class="team-row">
                 <div class="team-image">
-                    <img src="image1.jpg" alt="Description image 1" />
+                    <img src="../img/image1.jpg"alt="Image Ariel" />
                 </div>
                 <div class="team-text1">
                     <h3>Partenariats stratégiques pour un impact durable et significatif.</h3>
@@ -114,7 +114,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit... (texte)</p>
                 </div>
                 <div class="team-image">
-                    <img src="image2.jpg" alt="Description image 2" />
+                    <img src="../img/image2.jpg" alt="Image Jennifer" />
                 </div>
             </div>
             </section>
