--- a/html/apropos.html
+++ b/html/apropos.html
@@ -8,8 +8,6 @@
     </head><!-- Fin de la balise d'entête -->
     <body><!-- Début du code de la page web -->
         <header>
-                <img alt="image alt text" src="../img/GreenIT.jpg" height="200" width="400"> <!-- logo à changer-->
-            </a>
             <nav>
                 <a href="./accueil.html">Accueil</a>
                 <a href="./apropos.html">A propos</a>
@@ -18,58 +16,26 @@
                 <button type="submit" class="navbutton ">S'inscrire</button>
             </nav>
         </header>
-
-        <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <title>À propos - Contre la pauvreté</title>
-    <link rel="stylesheet" href="apropos.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
-</head>
-    <main class="container">
-        <section class="intro">
-            <h1>Qui sommes-nous ?</h1>
+        <section id="a-propos">
+        <h2>À propos de notre projet</h2>
             <p>Nous sommes une organisation engagée contre la pauvreté, créée en 2019. Notre objectif : agir concrètement sur le terrain pour redonner espoir à ceux qui en ont besoin.</p>
-        </section>
-
-        <section class="mission">
-            <h2>Notre mission</h2>
-            <p>Nous croyons en un monde où chacun a droit à la dignité. Nos actions visent à offrir un soutien alimentaire, social, et humain aux plus démunis.</p>
-        </section>
-
-        <section class="actions">
-            <h2>Ce que nous faisons</h2>
-            <ul>
-                <li>🥖 Distribution de repas hebdomadaire</li>
-                <li>🧥 Dons de vêtements et couvertures</li>
-                <li>📄 Aide administrative et accompagnement social</li>
-                <li>🛒 Collectes solidaires avec des commerces locaux</li>
-            </ul>
-        </section>
-
-        <section class="impact">
-            <h2>Notre impact</h2>
-            <div class="stats">
-                <div><strong>+3 000</strong><br>Repas distribués</div>
-                <div><strong>150</strong><br>Familles soutenues</div>
-                <div><strong>30+</strong><br>Jeunes réinsérés</div>
-                <div><strong>12</strong><br>Bénévoles actifs</div>
+        <div class="membres-container">
+            <div class="membre">
+                    <img src="../img/image1.jpg"alt="Image Ariel" />
+            <div>
+                <h3>YAPO Ariel</h3>
+                <p>Responsable de l’interface utilisateur et de l'intégration HTML/CSS.</p>
             </div>
+            </div>
+            <div class="membre">
+                    <img src="../img/image2.jpg" alt="Image Jennifer" />
+            <div>
+                <h3>RAKOTOARINIA Jennifer</h3>
+                <p>En charge de la logique JavaScript et des fonctionnalités dynamiques.</p>
+            </div>
+            </div>
+        </div>
         </section>
-
-        <section class="temoignages">
-            <h2>Témoignages</h2>
-            <blockquote>“Grâce à cette équipe, j’ai pu passer l’hiver au chaud et retrouver un emploi.” — Aminata</blockquote>
-            <blockquote>“Donner de mon temps ici a changé ma perception de la solidarité.” — Lucas, bénévole</blockquote>
-        </section>
-
-        <section class="contact">
-            <h2>Envie de faire partie du changement ?</h2>
-            <p>Rejoignez-nous comme bénévole ou soutenez notre cause par un don.</p>
-            <a class="cta-button" href="./don.html">Faire un don</a>
-        </section>
-    </main>
 
             <footer>
             <p>©2025 Ariel YAPO & Jennifer RAKOTOARINIA.</p>
