--- a/html/partenaires.html
+++ b/html/partenaires.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html> <!-- Version 5 de HTML-->
 <html lang="fr"> <!-- Précision de la langue pour le navigateur-->
     <head> <!-- Entête du document HTML -->
@@ -7,9 +8,7 @@
         <link rel="stylesheet" type="text/css" href="../css/styles.css">
     </head><!-- Fin de la balise d'entête -->
     <body><!-- Début du code de la page web -->
-        <header>
-                <img alt="image alt text" src="../img/GreenIT.jpg" height="200" width="400"> <!-- logo à changer-->
-            </a>
+        <header class="header_don">
             <nav>
                 <a href="./accueil.html">Accueil</a>
                 <a href="./apropos.html">A propos</a>
@@ -18,6 +17,52 @@
                 <button type="submit" class="navbutton ">S'inscrire</button>
             </nav>
         </header>
+        <section class="actions">
+            <h2>Ce que nous faisons</h2>
+            <ul>
+                <li>🥖 Distribution de repas hebdomadaire</li>
+                <li>🧥 Dons de vêtements et couvertures</li>
+                <li>📄 Aide administrative et accompagnement social</li>
+                <li>🛒 Collectes solidaires avec des commerces locaux</li>
+            </ul>
+        </section>
+
+        <section class="partenaires">
+            <h2>Nos partenaires</h2>
+            <div class="partenaires-disposition">
+            <div class="partenaire-box">
+                <a href="https://breakpoverty.com/">
+                <img alt="breakpoverty" src="../img/breakPoverty.jpg" height="200" width="400">
+            </a>
+            <p>Break poverty</p>
+            </div>
+            <div class="partenaire-box">
+                <a href=https://ifi.fondationnotredame.fr/?mediaCode=IFI25GTH&utm_source=google&utm_medium=cpc&utm_campaign=Search%20-%20Th%C3%A9matiques%20-%20IFI%202025&utm_content=177928915179&utm_term=association%20lutte%20pauvret%C3%A9&gad_source=1&gad_campaignid=22425020609&gbraid=0AAAAADygyaMy_RdLRVRSdAoQ6KPmTn85Y&gclid=CjwKCAjwl_XBBhAUEiwAWK2hzp2b5BrUgEj7bL1soU5FMMXIbk52Ay8AP2QX-ypRPyTv_1isVfSLGhoCiL8QAvD_BwE>
+                <img alt="fondationnotredame" src="../img/fondationNotreDame.jpg" height="200" width="400">
+            </a>
+            <p>Fondation notre dame</p>
+            </div>
+            <div class="partenaire-box">
+                <a href=https://ifi.petitsfreresdespauvres.fr/?utm_source=cpc&utm_medium=google&utm_campaign=IFI25&utm_content={{adset.name}}&utm_term=hors-marque&gad_source=1&gad_campaignid=22443338564&gbraid=0AAAAADzMomsOLOZIUKtYO4pq1q16mS_Sb&gclid=CjwKCAjwl_XBBhAUEiwAWK2hzhwMLt54L6bGtdhNmpHW4c54mOpuYYNOy1Vv5UXBGqWRRe_GvI7fZxoC9UgQAvD_BwE>
+                <img alt="Fondation" src="../img/FondationPetitsFrèresPauvres.jpg" height="200" width="400">
+            </a>
+            <p>Fondation petits frères des pauvres</p>
+            </div>
+            <div class="partenaire-box">
+                <a href="https://www.atd-quartmonde.fr/">
+                <img alt="ATD" src="../img/ATDQuartMonde.png" height="200" width="400">
+            </a>
+            <p>ATD Quart Monde</p>
+            </div>
+        </div>
+        </section>
+
+        <section class="contact">
+            <h2>Envie de faire partie du changement ?</h2>
+            <p>Rejoignez-nous comme bénévole ou soutenez notre cause par un don.</p>
+            <a class="button" href="./don.html">Faire un don</a>
+        </section>
+    </main>
 
             <footer>
             <p>©2025 Ariel YAPO & Jennifer RAKOTOARINIA.</p>
