--- a/html/don.html
+++ b/html/don.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" type="text/css" href="../css/styles.css">
     </head><!-- Fin de la balise d'entête -->
     <body><!-- Début du code de la page web -->
-        <header class="header_don">
+        <header class="site-header">
+            <div class="logo">Logo</div>
             <nav>
                 <a href="./accueil.html">Accueil</a>
                 <a href="./apropos.html">A propos</a>
@@ -52,10 +53,32 @@
             <input type="submit" value="Faire un don"/>
         </form>
     </div>            
-    <footer>
-        <p>©2025 Ariel YAPO & Jennifer RAKOTOARINIA.</p>
-        <a href="./apropos.html">A propos</a>
-        <p>Tous droits réservés.</p>
-    </footer>
+    <footer id="footer-a-propos">
+  <div class="footer-container">
+    <div class="footer-info">
+      <h3 class="footer-logo">Logo</h3>
+      <p><strong>Adresse:</strong><br>Niveau 1, 12 Sample St, Sydney NSW 2000</p>
+      <p><strong>Contact:</strong><br>1800 123 4567<br><a href="mailto:email@example.com">email@example.com</a></p>
+    </div>
+
+    <div class="footer-links">
+      <ul>
+        <li><a href="./accueil.html">Accueil</a></li>
+        <li><a href="./apropos.html">À propos</a></li>
+        <li><a href="./don.html">Faites un don</a></li>
+        <li><a href="./partenaires.html">Partenaires</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="footer-bottom">
+    <p>&copy; 2025 Ariel YAPO & Jennifer RAKOTOARINIA. Tous droits réservés.</p>
+    <div class="footer-legal">
+      <a href="https://github.com/jenniferrkt/projet-WEB.git">Politique de Confidentialité</a>
+      <a href="https://github.com/jenniferrkt/projet-WEB.git">Conditions d’utilisation</a>
+    </div>
+  </div>
+</footer>
     </body><!-- Fin du code de la page web -->
 </html><!-- Fin du document -->
